Forge updated to Forge 41.1.0.